--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,28 @@
+/* width */
+body {
+    overflow-y: scroll;
+}
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #111827; 
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #374151; 
+}
+
+/* Handle on hover */
+/* ::-webkit-scrollbar-thumb:hover {
+  background: #737373; 
+} */
+
+
 input:-webkit-autofill,
 input:-webkit-autofill:hover, 
 input:-webkit-autofill:focus, 
