Can now view the codes for quiz and delete quiz code. Additionally, hooks and components are improved.

--- a/src/App.css
+++ b/src/App.css
@@ -32,3 +32,7 @@ input:-webkit-autofill:active{
     transition: background-color 5000s ease-in-out 0s;
     box-shadow: inset 0 0 20px 20px #23232329;
 }
+
+::-webkit-calendar-picker-indicator {
+  filter: invert(1);
+}
