--- a/src/App.css
+++ b/src/App.css
@@ -3,18 +3,22 @@ body {
     overflow-y: scroll;
 }
 
+* {
+  -webkit-tap-highlight-color: transparent;
+}
+
 ::-webkit-scrollbar {
-  width: 10px;
+    width: 10px;
 }
 
 /* Track */
 ::-webkit-scrollbar-track {
-  background: #171923; 
+    background: #171923;
 }
- 
+
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: #374151; 
+    background: #374151;
 }
 
 /* Handle on hover */
@@ -22,11 +26,10 @@ body {
   background: #737373; 
 } */
 
-
 input:-webkit-autofill,
-input:-webkit-autofill:hover, 
-input:-webkit-autofill:focus, 
-input:-webkit-autofill:active{
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
     -webkit-background-clip: text;
     -webkit-text-fill-color: #ffffff;
     transition: background-color 5000s ease-in-out 0s;
@@ -34,5 +37,5 @@ input:-webkit-autofill:active{
 }
 
 ::-webkit-calendar-picker-indicator {
-  filter: invert(1);
+    filter: invert(1);
 }
